--- a/AddressRepoLib.TestsWithAutofac/AddressRepoLib.TestsWithAutofac.csproj
+++ b/AddressRepoLib.TestsWithAutofac/AddressRepoLib.TestsWithAutofac.csproj
@@ -83,6 +83,8 @@
   <ItemGroup>
     <Compile Include="AddressRepositoryTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WithProperBaseClass\AddressRepositoryTestsDerived.cs" />
+    <Compile Include="WithProperBaseClass\MyTestBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
