--- a/AddressRepoLib.TestsWithAutofac/AddressRepoLib.TestsWithAutofac.csproj
+++ b/AddressRepoLib.TestsWithAutofac/AddressRepoLib.TestsWithAutofac.csproj
@@ -83,7 +83,9 @@
   <ItemGroup>
     <Compile Include="AddressRepositoryTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WithProperBaseClass\AddressRepositoryTestsBase.cs" />
     <Compile Include="WithProperBaseClass\AddressRepositoryTestsUsingJson.cs" />
+    <Compile Include="WithProperBaseClass\AddressRepositoryTestsUsingXml.cs" />
     <Compile Include="WithProperBaseClass\MyTestBase.cs" />
   </ItemGroup>
   <ItemGroup>
